# succulent

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/templates/: PULL_REQUEST.md
.github/workflows/: test.yml
docs/: code_of_conduct.rst  conf.py  documentation.rst  getting_started.rst  index.rst  installation.rst  license.rst  refs.bib  requirements.txt  testing.rst
docs/api/: api.rst  configuration.rst  index.rst  processing.rst
examples/: config_from_directory.py  config_from_outer_directory.py  config_from_root.py  configuration.yml  image_upload.py
examples/configuration/: image.yml
succulent/: __init__.py  api.py  configuration.py  configuration.yml  processing.py
tests/: configuration.yml  test_succulent.py
