[tool.poetry]
name = "succulent"
version = "0.1.0"
description = "Collect POST requests easily"
license = "MIT"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Tadej Lahovnik <lahovnik.tadej@gmail.com>"]
keywords = ['data collection', 'data science', 'sensor measurements']
homepage = "https://github.com/firefly-cpp/succulent"
repository = "https://github.com/firefly-cpp/succulent"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
pandas = "^2.0.0"
flask = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
