[tool.poetry]
name = "succulent"
version = "0.3.0"
description = "Collect POST requests easily"
license = "MIT"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Tadej Lahovnik <lahovnik.tadej@gmail.com>"]
keywords = ['data collection', 'data science', 'ESP32', 'sensor measurements', 'smart agriculture', 'smartwatch']
homepage = "https://github.com/firefly-cpp/succulent"
repository = "https://github.com/firefly-cpp/succulent"
documentation = "https://succulent.readthedocs.io/en/latest/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
pyyaml = "^6.0"
flask = "^2.3.2"
Sphinx = {version = "^4.4.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinxcontrib-bibtex = {version = "^2.4.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
